<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".NewShoeDetailsScreen"
    >

        <TextView
                android:text="@string/company_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/company_view"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_company"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin"
                style="@style/text_view_style"
        />
        <TextView
                android:text="@string/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/description_view"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin"
                style="@style/text_view_style"
        />
        <TextView
                android:text="@string/size_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/size_view"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_size"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin"
                style="@style/text_view_style"
        />
        <TextView
                android:text="@string/shoe_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shoe_name_view"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_shoe_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin"
                style="@style/text_view_style"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_text_shoe_name"
                android:hint="@string/shoe_name_hint"
                android:layout_marginEnd="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrier2"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/new_shoe_title_view"
                style="@style/edit_text_style"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_text_shoe_company"
                android:hint="@string/company_hint"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_name"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/margin"
                app:layout_constraintStart_toEndOf="@id/barrier2"
                style="@style/edit_text_style"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edit_text_shoe_size"
                android:hint="@string/shoe_size_hint"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_company"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/margin"
                app:layout_constraintStart_toEndOf="@id/barrier2"
                style="@style/edit_text_style"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textPersonName"
                android:ems="10"
                android:id="@+id/edit_text_shoe_description"
                android:hint="@string/description_hint"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_shoe_size"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/margin"
                app:layout_constraintStart_toEndOf="@id/barrier2"
                style="@style/edit_text_style"
        />
        <Button
                android:text="@string/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                style="@style/button_style"
                />
        <Button
                android:text="@string/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_btn"
                app:layout_constraintBaseline_toBaselineOf="@+id/save_btn"
                app:layout_constraintEnd_toStartOf="@+id/save_btn"
                android:layout_marginEnd="@dimen/margin"
                style="@style/outline_button_style"
        />
        <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/barrier2"
                app:barrierDirection="end"
                app:constraint_referenced_ids="company_view,description_view,size_view,shoe_name_view"
                tools:layout_editor_absoluteX="411dp"/>
        <TextView
                android:text="@string/new_shoe_title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/new_shoe_title_view"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                style="@style/sub_title_style"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>