<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <TextView
                android:text="@string/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                style="@style/title_style"
        />
        <Button
                android:text="@string/welcome_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/button_style"
        />
        <TextView
                android:text="@string/sub_title_welcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toTopOf="@+id/welcome_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text_view_style"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>